Integrate DeepL API and establish basic frontend

--- a/src/app/output-box/output-box.component.html
+++ b/src/app/output-box/output-box.component.html
@@ -1,1 +1,5 @@
-<p>output-box works!</p>
+<!-- Output box for translated text -->
+<!-- Light grey filled box -->
+<div class="output-box" id="output-box">
+    <p id="output">Translated text will go here!</p>
+</div>
