--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -1,1 +1,6 @@
-<p>input-box works!</p>
+<!-- Input box for text to be translated -->
+<!-- Thin outline and "insert text" -->
+<div class="input-box">
+    <textarea type="text" id="text-input" class="input" placeholder="Insert text to be translated here!" #box></textarea>
+</div>
+<button (click)="translate(box.value)">Translate</button>
