--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Site header -->
-<h3>Translate!</h3>
+<h3>Text Translator</h3>
 <div class="dropdowns">
     <app-source-dropdown></app-source-dropdown>
     <div class="space"></div>
