--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -3,4 +3,4 @@
 <div class="input-box">
     <textarea type="text" id="text-input" class="input" placeholder="Insert text to be translated here!" #box></textarea>
 </div>
-<button (click)="translate(box.value)">Translate</button>
+<button class="translatebtn" (click)="translate(box.value)">Translate</button>
