--- a/src/app/source-dropdown/source-dropdown.component.css
+++ b/src/app/source-dropdown/source-dropdown.component.css
@@ -6,7 +6,7 @@
     margin-right: 0;
     width: 100%;
     background-color: white;
-    color: black;
+    color: blue;
     border-width: 1px;
     border-radius: 4px;
     border-color: black;
